# missleos

./: .gitignore  CMakeLists.txt  README.md  prime
src/: accelerometer.c  altimeter.c  data.h  main.c
